--- a/.github/workflows/ci-dev.yaml
+++ b/.github/workflows/ci-dev.yaml
@@ -26,12 +26,10 @@ jobs:
       - name: Setup Terraform
         uses: hashicorp/setup-terraform@v3
 
-      - name: Install Terragrunt
-        run: |
-          TERRAGRUNT_VERSION="v0.56.3"
-          curl -L "https://github.com/gruntwork-io/terragrunt/releases/download/${TERRAGRUNT_VERSION}/terragrunt_linux_amd64" -o terragrunt
-          chmod +x terragrunt
-          sudo mv terragrunt /usr/local/bin/
+      - name: Setup Terragrunt
+        uses: gruntwork-io/terragrunt-action@v1
+        with:
+          terragrunt_version: 0.56.3
 
       - name: Setup Infracost
         uses: infracost/actions/setup@v2
@@ -88,10 +86,3 @@ jobs:
         with:
           name: infracost-report-dev
           path: infracost-report-dev.html
-
-      # Optional: Uncomment if you're using LocalStack + Terratest
-      # - name: Start LocalStack
-      #   run: docker run -d -p 4566:4566 localstack/localstack-light
-
-      # - name: Run Terratest (S3 test)
-      #   run: go test -v tests/s3_test.go
