--- a/.github/workflows/ci-stage.yaml
+++ b/.github/workflows/ci-stage.yaml
@@ -22,6 +22,11 @@ jobs:
       - name: Setup Terraform
         uses: hashicorp/setup-terraform@v3
 
+      - name: Setup Terragrunt
+        uses: autero1/action-terragrunt@v3
+        with:
+          terragrunt-version: 0.56.3
+
       - name: Setup Infracost
         uses: infracost/actions/setup@v2
         with:
