--- a/.github/workflows/ci-stage.yaml
+++ b/.github/workflows/ci-stage.yaml
@@ -6,9 +6,12 @@ on:
       - 'infrastructure/envs/stage/**'
 
 jobs:
-  stage-ci:
-    runs-on: ubuntu-latest
 
+  # -----------------------------------
+  # STAGE 1: Format and Lint Checks
+  # -----------------------------------
+  lint:
+    runs-on: ubuntu-latest
     env:
       AWS_ACCESS_KEY_ID: test
       AWS_SECRET_ACCESS_KEY: test
@@ -27,16 +30,34 @@ jobs:
         with:
           terragrunt-version: 0.56.3
 
-      - name: Setup Infracost
-        uses: infracost/actions/setup@v2
-        with:
-          api-key: ${{ secrets.INFRACOST_API_KEY }}
-
       - name: Check Terraform formatting
         run: terraform fmt -check -recursive infrastructure/envs/stage
 
       - name: Check Terragrunt HCL formatting
         run: terragrunt hclfmt --check --recursive infrastructure/envs/stage
+
+  # -----------------------------------
+  # STAGE 2: Validate and Security Check
+  # -----------------------------------
+  validate:
+    runs-on: ubuntu-latest
+    needs: lint
+    env:
+      AWS_ACCESS_KEY_ID: test
+      AWS_SECRET_ACCESS_KEY: test
+      AWS_REGION: us-east-1
+
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v3
+
+      - name: Setup Terraform
+        uses: hashicorp/setup-terraform@v3
+
+      - name: Setup Terragrunt
+        uses: autero1/action-terragrunt@v3
+        with:
+          terragrunt-version: 0.56.3
 
       - name: Initialize with Terragrunt
         run: terragrunt init --working-dir infrastructure/envs/stage
@@ -61,10 +82,40 @@ jobs:
             checkov -f infrastructure/envs/stage/tf.json --external-checks-dir custom_policies
           fi
 
+      - name: Upload tf.json artifact for downstream jobs
+        uses: actions/upload-artifact@v4
+        with:
+          name: tfjson-stage
+          path: infrastructure/envs/stage/tf.json
+
+  # -----------------------------------
+  # STAGE 3: Infracost Analysis
+  # -----------------------------------
+  infracost:
+    runs-on: ubuntu-latest
+    needs: validate
+    env:
+      AWS_REGION: us-east-1
+
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v3
+
+      - name: Setup Infracost
+        uses: infracost/actions/setup@v2
+        with:
+          api-key: ${{ secrets.INFRACOST_API_KEY }}
+
+      - name: Download tf.json
+        uses: actions/download-artifact@v4
+        with:
+          name: tfjson-stage
+          path: tfjson
+
       - name: Run Infracost breakdown
         run: |
           infracost breakdown \
-            --path=infrastructure/envs/stage/tf.json \
+            --path=tfjson/tf.json \
             --usage-file=infracost/infracost-usage.yml \
             --format=github-comment \
             --show-skipped \
@@ -82,10 +133,3 @@ jobs:
         with:
           name: infracost-report-stage
           path: infracost-report-stage.html
-
-      # Optional: Uncomment if you're using LocalStack + Terratest
-      # - name: Start LocalStack
-      #   run: docker run -d -p 4566:4566 localstack/localstack-light
-
-      # - name: Run Terratest (S3 test)
-      #   run: go test -v tests/s3_test.go
