--- a/custom_policies/lambda_package_type_image_only.yaml
+++ b/custom_policies/lambda_package_type_image_only.yaml
@@ -3,6 +3,12 @@ metadata:
   id: "CUSTOM_LAMBDA_IMAGE_ONLY"
   category: "deployment"
   severity: "HIGH"
+
+scope:
+  provider: aws
+  resource_types:
+    - aws_lambda_function  
+    
 definition:
   cond_type: "attribute"
   resource_types:
