--- a/custom_policies/rds_required_tags.yaml
+++ b/custom_policies/rds_required_tags.yaml
@@ -3,6 +3,12 @@ metadata:
   id: "CUSTOM_RDS_TAGS"
   category: "tagging"
   severity: "MEDIUM"
+
+scope:
+  provider: aws
+  resource_types:
+    - aws_db_instance 
+
 definition:
   and:
     - cond_type: "attribute"
