--- a/custom_policies/s3_required_tags.yaml
+++ b/custom_policies/s3_required_tags.yaml
@@ -3,6 +3,12 @@ metadata:
   id: "CUSTOM_S3_REQUIRED_TAGS"
   category: "tagging"
   severity: "MEDIUM"
+
+scope:
+  provider: aws
+  resource_types:
+    - aws_s3_bucket 
+    
 definition:
   and:
     - cond_type: "attribute"
