--- a/custom_policies/sg_tags.yaml
+++ b/custom_policies/sg_tags.yaml
@@ -3,6 +3,12 @@ metadata:
   id: "CUSTOM_SG_TAGS"
   category: "tagging"
   severity: "MEDIUM"
+
+scope:
+  provider: aws
+  resource_types:
+    - aws_security_group 
+
 definition:
   and:
     - cond_type: "attribute"
