--- a/custom_policies/sqs_retention_under_7_days.yaml
+++ b/custom_policies/sqs_retention_under_7_days.yaml
@@ -3,6 +3,12 @@ metadata:
   id: "CUSTOM_SQS_RETENTION"
   category: "performance"
   severity: "LOW"
+
+scope:
+  provider: aws
+  resource_types:
+    - aws_sqs_queue
+    
 definition:
   cond_type: "attribute"
   resource_types:
