--- a/custom_policies/vpc_tags.yaml
+++ b/custom_policies/vpc_tags.yaml
@@ -3,6 +3,12 @@ metadata:
   id: "CUSTOM_VPC_TAGS"
   category: "tagging"
   severity: "MEDIUM"
+
+scope:
+  provider: aws
+  resource_types:
+    - aws_vpc
+
 definition:
   and:
     - cond_type: "attribute"
@@ -10,6 +16,7 @@ definition:
         - "aws_vpc"
       attribute: "tags.Environment"
       operator: "exists"
+      
     - cond_type: "attribute"
       resource_types:
         - "aws_vpc"
