--- a/custom_policies/lambda_internal.yaml
+++ b/custom_policies/lambda_internal.yaml
@@ -3,6 +3,12 @@ metadata:
   id: "CUSTOM_LAMBDA_INTERNAL_VPC"
   category: "networking"
   severity: "HIGH"
+
+scope:
+  provider: aws
+  resource_types:
+    - aws_lambda_function_url 
+    
 definition:
   and:
     - cond_type: "attribute"
