--- a/custom_policies/s3_block_public.yaml
+++ b/custom_policies/s3_block_public.yaml
@@ -3,6 +3,12 @@ metadata:
   id: "CUSTOM_S3_BLOCK_PUBLIC"
   category: "networking"
   severity: "HIGH"
+  
+scope:
+  provider: aws
+  resource_types:
+    - aws_s3_bucket_public_access_block 
+
 definition:
   and:
     - cond_type: "attribute"
