--- a/custom_policies/sqs_encryption_enabled.yaml
+++ b/custom_policies/sqs_encryption_enabled.yaml
@@ -3,6 +3,12 @@ metadata:
   id: "CUSTOM_SQS_ENCRYPTION"
   category: "encryption"
   severity: "HIGH"
+
+scope:
+  provider: aws
+  resource_types:
+    - aws_sqs_queue
+    
 definition:
   cond_type: "attribute"
   resource_types:
