--- a/custom_policies/sqs_max_message_size.yaml
+++ b/custom_policies/sqs_max_message_size.yaml
@@ -3,6 +3,12 @@ metadata:
   id: "CUSTOM_SQS_MAX_MESSAGE_SIZE"
   category: "performance"
   severity: "MEDIUM"
+
+scope:
+  provider: aws
+  resource_types:
+    - aws_sqs_queue
+    
 definition:
   cond_type: "attribute"
   resource_types:
