--- a/custom_policies/lambda_required_tags.yaml
+++ b/custom_policies/lambda_required_tags.yaml
@@ -4,18 +4,16 @@ metadata:
   category: "tagging"
   severity: "MEDIUM"
 
-scope:
-  provider: aws
-  resource_types:
-    - aws_lambda_function  
-    
 definition:
   and:
-    - cond_type: "attribute"
+    - cond_type: "resource_type"
       resource_types:
         - "aws_lambda_function"
+        
+    - cond_type: "attribute"
       attribute: "tags.Environment"
       operator: "exists"
+
     - cond_type: "attribute"
       resource_types:
         - "aws_lambda_function"
