--- a/custom_policies/iam_no_wildcard.yaml
+++ b/custom_policies/iam_no_wildcard.yaml
@@ -4,17 +4,14 @@ metadata:
   category: "iam"
   severity: "CRITICAL"
 
-scope:
-  provider: aws
-  resource_types:
-    - aws_iam_policy  
-    - aws_iam_role_policy
-
 definition:
-  cond_type: "attribute"
-  resource_types:
-    - "aws_iam_policy"
-    - "aws_iam_role_policy"
-  attribute: "policy"
-  operator: "not_contains"
-  value: '"Action":"*"'
+  and: 
+    - cond_type: "resource_type"
+      resource_types:
+        - "aws_iam_policy"
+        - "aws_iam_role_policy"
+        
+    - cond_type: "attribute"
+      attribute: "policy"
+      operator: "not_contains"
+      value: '"Action":"*"'
