--- a/custom_policies/iam_role_tags.yaml
+++ b/custom_policies/iam_role_tags.yaml
@@ -4,20 +4,16 @@ metadata:
   category: "tagging"
   severity: "MEDIUM"
 
-scope:
-  provider: aws
-  resource_types:
-    - aws_iam_role 
-    
 definition:
   and:
-    - cond_type: "attribute"
+    - cond_type: "resource_type"
       resource_types:
         - "aws_iam_role"
+        
+    - cond_type: "attribute"
       attribute: "tags.Environment"
       operator: "exists"
+
     - cond_type: "attribute"
-      resource_types:
-        - "aws_iam_role"
       attribute: "tags.Owner"
       operator: "exists"
