--- a/custom_policies/lambda_package_type_image_only.yaml
+++ b/custom_policies/lambda_package_type_image_only.yaml
@@ -4,15 +4,13 @@ metadata:
   category: "deployment"
   severity: "HIGH"
 
-scope:
-  provider: aws
-  resource_types:
-    - aws_lambda_function  
-    
 definition:
-  cond_type: "attribute"
-  resource_types:
-    - "aws_lambda_function"
-  attribute: "package_type"
-  operator: "equals"
-  value: "Image"
+  and: 
+    - cond_type: "resource_type"
+      resource_types:
+        - "aws_lambda_function"
+
+    - cond_type: "attribute"
+      attribute: "package_type"
+      operator: "equals"
+      value: "Image"
