--- a/custom_policies/rds_backup_retention_min.yaml
+++ b/custom_policies/rds_backup_retention_min.yaml
@@ -3,16 +3,14 @@ metadata:
   id: "CUSTOM_RDS_BACKUP_RETENTION"
   category: "recovery"
   severity: "MEDIUM"
-
-scope:
-  provider: aws
-  resource_types:
-    - aws_lambda_function 
     
 definition:
-  cond_type: "attribute"
-  resource_types:
-    - "aws_db_instance"
-  attribute: "backup_retention_period"
-  operator: "greater_than_or_equal"
-  value: 7
+  add:
+    - cond_type: "resource_type"
+      resource_types:
+        - "aws_db_instance"
+        
+    - cond_type: "attribute"
+      attribute: "backup_retention_period"
+      operator: "greater_than_or_equal"
+      value: 7
