--- a/custom_policies/rds_max_storage.yaml
+++ b/custom_policies/rds_max_storage.yaml
@@ -4,15 +4,14 @@ metadata:
   category: "performance"
   severity: "MEDIUM"
 
-scope:
-  provider: aws
-  resource_types:
-    - aws_db_instance 
     
 definition:
-  cond_type: "attribute"
-  resource_types:
-    - "aws_db_instance"
-  attribute: "allocated_storage"
-  operator: "less_than_or_equal"
-  value: 100
+  and: 
+    - cond_type: "resource_type"
+        resource_types:
+          - "aws_db_instance"
+
+    - cond_type: "attribute"
+      attribute: "allocated_storage"
+      operator: "less_than_or_equal"
+      value: 100
