--- a/custom_policies/rds_must_have_max_allocated.yaml
+++ b/custom_policies/rds_must_have_max_allocated.yaml
@@ -4,14 +4,12 @@ metadata:
   category: "scalability"
   severity: "MEDIUM"
 
-scope:
-  provider: aws
-  resource_types:
-    - aws_db_instance 
-    
 definition:
-  cond_type: "attribute"
-  resource_types:
-    - "aws_db_instance"
-  attribute: "max_allocated_storage"
-  operator: "exists"
+  and: 
+    - cond_type: "resource_type"
+      resource_types:
+        - "aws_db_instance"
+
+    - cond_type: "attribute"
+      attribute: "max_allocated_storage"
+      operator: "exists"
