--- a/custom_policies/rds_no_public_access.yaml
+++ b/custom_policies/rds_no_public_access.yaml
@@ -3,16 +3,14 @@ metadata:
   id: "CUSTOM_RDS_NO_PUBLIC"
   category: "networking"
   severity: "HIGH"
-
-scope:
-  provider: aws
-  resource_types:
-    - aws_db_instance 
     
 definition:
-  cond_type: "attribute"
-  resource_types:
-    - "aws_db_instance"
-  attribute: "publicly_accessible"
-  operator: "equals"
-  value: false
+  and: 
+    - cond_type: "resource_type"
+      resource_types:
+        - "aws_db_instance"
+
+    - cond_type: "attribute"
+      attribute: "publicly_accessible"
+      operator: "equals"
+      value: false
