--- a/custom_policies/s3_acl_no_public.yaml
+++ b/custom_policies/s3_acl_no_public.yaml
@@ -10,9 +10,12 @@ scope:
     - aws_s3_bucket 
     
 definition:
-  cond_type: "attribute"
-  resource_types:
-    - "aws_s3_bucket"
-  attribute: "acl"
-  operator: "not_equals"
-  value: "public-read"
+  and:
+    - cond_type: "resource_type"
+      resource_types:
+        - "aws_s3_bucket"
+
+    - cond_type: "attribute"
+      attribute: "acl"
+      operator: "not_equals"
+      value: "public-read"
