--- a/custom_policies/s3_required_tags.yaml
+++ b/custom_policies/s3_required_tags.yaml
@@ -11,18 +11,18 @@ scope:
     
 definition:
   and:
-    - cond_type: "attribute"
+    - cond_type: "resource_type"
       resource_types:
         - "aws_s3_bucket"
+
+    - cond_type: "attribute"
       attribute: "tags.Environment"
       operator: "exists"
+
     - cond_type: "attribute"
-      resource_types:
-        - "aws_s3_bucket"
       attribute: "tags.Owner"
       operator: "exists"
+      
     - cond_type: "attribute"
-      resource_types:
-        - "aws_s3_bucket"
       attribute: "tags.CostCenter"
       operator: "exists"
