--- a/custom_policies/sg_no_ingress_anywhere.yaml
+++ b/custom_policies/sg_no_ingress_anywhere.yaml
@@ -10,9 +10,12 @@ scope:
     - aws_security_group_rule 
     
 definition:
-  cond_type: "attribute"
-  resource_types:
-    - "aws_security_group_rule"
-  attribute: "cidr_blocks"
-  operator: "not_contains"
-  value: "0.0.0.0/0"
+  and:
+    - cond_type: "resource_type"
+      resource_types:
+        - "aws_security_group_rule"
+
+    - cond_type: "attribute"
+      attribute: "cidr_blocks"
+      operator: "not_contains"
+      value: "0.0.0.0/0"
