--- a/custom_policies/sg_tags.yaml
+++ b/custom_policies/sg_tags.yaml
@@ -11,13 +11,14 @@ scope:
 
 definition:
   and:
-    - cond_type: "attribute"
+    - cond_type: "resource_type"
       resource_types:
         - "aws_security_group"
+
+    - cond_type: "attribute"
       attribute: "tags.Environment"
       operator: "exists"
+      
     - cond_type: "attribute"
-      resource_types:
-        - "aws_security_group"
       attribute: "tags.Owner"
       operator: "exists"
