--- a/custom_policies/sqs_visibility_timeout.yaml
+++ b/custom_policies/sqs_visibility_timeout.yaml
@@ -10,9 +10,12 @@ scope:
     - aws_sqs_queue
     
 definition:
-  cond_type: "attribute"
-  resource_types:
-    - "aws_sqs_queue"
-  attribute: "visibility_timeout_seconds"
-  operator: "less_than_or_equal"
-  value: 43200  # 12 hours in seconds
+  and:
+    - cond_type: "resource_type"
+      resource_types:
+        - "aws_sqs_queue"
+
+    - cond_type: "attribute"
+      attribute: "visibility_timeout_seconds"
+      operator: "less_than_or_equal"
+      value: 43200  # 12 hours in seconds
