--- a/custom_policies/vpc_cidr_private_range.yaml
+++ b/custom_policies/vpc_cidr_private_range.yaml
@@ -10,9 +10,12 @@ scope:
     - aws_vpc
     
 definition:
-  cond_type: "attribute"
-  resource_types:
-    - "aws_vpc"
-  attribute: "cidr_block"
-  operator: "regex_match"
-  value: "^(10\\..*|172\\.(1[6-9]|2[0-9]|3[0-1])\\..*|192\\.168\\..*)$"
+  and:
+    - cond_type: "resource_type"
+      resource_types:
+        - "aws_vpc"
+
+    - cond_type: "attribute"
+      attribute: "cidr_block"
+      operator: "regex_match"
+      value: "^(10\\..*|172\\.(1[6-9]|2[0-9]|3[0-1])\\..*|192\\.168\\..*)$"
