--- a/custom_policies/vpc_tags.yaml
+++ b/custom_policies/vpc_tags.yaml
@@ -11,14 +11,14 @@ scope:
 
 definition:
   and:
-    - cond_type: "attribute"
+    - cond_type: "resource_type"
       resource_types:
         - "aws_vpc"
+        
+    - cond_type: "attribute"
       attribute: "tags.Environment"
       operator: "exists"
       
     - cond_type: "attribute"
-      resource_types:
-        - "aws_vpc"
       attribute: "tags.Owner"
       operator: "exists"
