--- a/custom_policies/terraform/sg_no_all_ports.yaml
+++ b/custom_policies/terraform/sg_no_all_ports.yaml
@@ -4,23 +4,20 @@ metadata:
   category: "networking"
   severity: "CRITICAL"
 
-scope:
-  provider: aws
-  resource_types:
-    - aws_security_group_rule 
     
 definition:
   and:
-    - cond_type: "resource_type"
-      resource_types:
-        - "aws_security_group_rule"
 
-    - cond_type: "attribute"
-      attribute: "from_port"
+    - cond_type: attribute
+      attribute: from_port
+      resource_types:
+        - aws_security_group_rule 
       operator: "less_than_or_equal"
       value: 0
       
-    - cond_type: "attribute"
-      attribute: "to_port"
+    - cond_type: attribute
+      attribute: to_port
+      resource_types:
+        - aws_security_group_rule 
       operator: "greater_than_or_equal"
       value: 65535
