--- a/.github/workflows/cache-ci-dev.yaml
+++ b/.github/workflows/cache-ci-dev.yaml
@@ -68,7 +68,7 @@ jobs:
 
             echo "Running custom Checkov policies"
             if [ -d "$GITHUB_WORKSPACE/custom_policies" ]; then
-              checkov --file tf.json --framework terraform_plan --external-checks-dir "$GITHUB_WORKSPACE/custom_policies/terraform" --output json --soft-fail > custom-checkov-report.json || echo "Custom Checkov failed"
+              checkov --skip-check CKV* -d .terragrunt-cache  --external-checks-dir "$GITHUB_WORKSPACE/custom_policies/terraform" --output json --soft-fail > custom-checkov-report.json || echo "Custom Checkov failed"
               if [ -s custom-checkov-report.json ]; then
                 cp custom-checkov-report.json "$CHECKOV_DIR/$(basename "$dir")-checkov-custom.json"
               else
