update: dry for workflow files

--- a/.github/workflows/ci-prod.yaml
+++ b/.github/workflows/ci-prod.yaml
@@ -4,14 +4,12 @@ on:
   pull_request:
     paths:
       - 'infrastructure/envs/prod/**'
-  push:
-    paths:
-      - 'infrastructure/envs/prod/**'
+
   workflow_dispatch:
 
 jobs:
   call-prod-ci:
-    uses: ./.github/workflows/ci-template.yml
+    uses: ./ci-template.yml
     with:
       env_name: prod
     secrets:
