--- a/.github/workflows/ci-prod.yaml
+++ b/.github/workflows/ci-prod.yaml
@@ -4,12 +4,14 @@ on:
   pull_request:
     paths:
       - 'infrastructure/envs/prod/**'
-
+  push:
+    paths:
+      - 'infrastructure/envs/prod/**'
   workflow_dispatch:
 
 jobs:
   call-prod-ci:
-    uses: ./ci-template.yml
+    uses: ./.github/workflows/ci-template.yaml
     with:
       env_name: prod
     secrets:
