--- a/.github/workflows/ci-stage.yaml
+++ b/.github/workflows/ci-stage.yaml
@@ -4,12 +4,14 @@ on:
   pull_request:
     paths:
       - 'infrastructure/envs/stage/**'
-
+  push:
+    paths:
+      - 'infrastructure/envs/stage/**'
   workflow_dispatch:
 
 jobs:
   call-stage-ci:
-    uses: ./ci-template.yml
+    uses: ./.github/workflows/ci-template.yaml
     with:
       env_name: stage
     secrets:
