--- a/.github/workflows/ci-template.yaml
+++ b/.github/workflows/ci-template.yaml
@@ -1,5 +1,5 @@
 # .github/workflows/ci-template.yml
-name: Reusable CI for Terragrunt + Checkov + Infracost
+name: CI Template
 
 on:
   workflow_call:
@@ -7,13 +7,9 @@ on:
       env_name:
         required: true
         type: string
-    secrets:
-      INFRACOST_API_KEY:
-        required: true
 
 jobs:
-  terragrunt-ci:
-    name: CI for ${{ inputs.env_name }}
+  reusable-ci:
     runs-on: ubuntu-latest
 
     steps:
@@ -36,36 +32,58 @@ jobs:
       - name: Install Checkov
         run: pip install checkov
 
-      - name: Set plugin cache
+      - name: Set plugin cache and ensure directory
         run: |
           echo "TF_PLUGIN_CACHE_DIR=$HOME/.terraform.d/plugin-cache" >> $GITHUB_ENV
-          mkdir -p "$TF_PLUGIN_CACHE_DIR"
+          mkdir -p "$HOME/.terraform.d/plugin-cache"
 
-      - name: Run CI checks per module
+      - name: Check Terragrunt HCL formatting
+        run: terragrunt hcl format
+
+      - name: Validate Terragrunt configuration
+        run: terragrunt hcl validate
+
+      - name: Run Checkov on each Terragrunt module and generate report
         run: |
           CHECKOV_DIR="$GITHUB_WORKSPACE/checkov-reports"
           mkdir -p "$CHECKOV_DIR"
 
           for dir in infrastructure/envs/${{ inputs.env_name }}/*/; do
-            echo "🔍 Module: $dir"
+            echo "🔍 Running Checkov for module: $dir"
             cd "$dir"
 
             terragrunt init --parallelism=40
             terragrunt plan -out=tf.plan
             terragrunt show -json tf.plan > tf.json
 
-            checkov --file tf.json --output json --soft-fail > checkov-report.json || true
-            cp checkov-report.json "$CHECKOV_DIR/$(basename "$dir")-checkov.json"
+            echo "Running inbuilt Checkov policies"
+            checkov --file tf.json --output json --soft-fail > checkov-report.json || echo "Checkov failed"
+            if [ -s checkov-report.json ]; then
+              cp checkov-report.json "$CHECKOV_DIR/$(basename "$dir")-checkov.json"
+            else
+              echo "⚠️ checkov-report.json not found or empty for $dir"
+            fi
 
+            echo "Running custom Checkov policies"
             if [ -d "$GITHUB_WORKSPACE/custom_policies" ]; then
-              checkov --skip-path tf.json --skip-check CKV* -d .terragrunt-cache --external-checks-dir "$GITHUB_WORKSPACE/custom_policies/terraform" --output json --soft-fail > custom-checkov-report.json || true
-              cp custom-checkov-report.json "$CHECKOV_DIR/$(basename "$dir")-checkov-custom.json"
+              checkov --skip-path tf.json --skip-check CKV* -d .terragrunt-cache \
+                --external-checks-dir "$GITHUB_WORKSPACE/custom_policies/terraform" \
+                --output json --soft-fail > custom-checkov-report.json || echo "Custom Checkov failed"
+              if [ -s custom-checkov-report.json ]; then
+                cp custom-checkov-report.json "$CHECKOV_DIR/$(basename "$dir")-checkov-custom.json"
+              else
+                echo "⚠️ custom-checkov-report.json not found or empty for $dir"
+              fi
+            else
+              echo "No custom policies found"
             fi
 
             cd - > /dev/null
           done
 
-      - name: Run Infracost Breakdown
+      - name: Run Infracost breakdown
+        env:
+          INFRACOST_API_KEY: ${{ secrets.INFRACOST_API_KEY }}
         run: |
           infracost breakdown \
             --path=infrastructure/envs/${{ inputs.env_name }} \
@@ -73,16 +91,37 @@ jobs:
             --format=json \
             --out-file=infracost-${{ inputs.env_name }}.json
 
-      - name: Generate Infracost HTML & Comment
+      - name: Generate Infracost HTML report
         run: |
-          infracost output --path=infracost-${{ inputs.env_name }}.json --format=html --out-file=infracost-report-${{ inputs.env_name }}.html
-          infracost output --path=infracost-${{ inputs.env_name }}.json --format=github-comment --out-file=infracost-comment-${{ inputs.env_name }}.json
+          infracost output \
+            --path=infracost-${{ inputs.env_name }}.json \
+            --format=html \
+            --out-file=infracost-report-${{ inputs.env_name }}.html
 
-      - name: Upload Reports
+      - name: Generate Infracost GitHub comment
+        run: |
+          infracost output \
+            --path=infracost-${{ inputs.env_name }}.json \
+            --format=github-comment \
+            --out-file=infracost-comment-${{ inputs.env_name }}.json
+
+      - name: Upload Infracost reports
         uses: actions/upload-artifact@v4
         with:
-          name: reports-${{ inputs.env_name }}
+          name: infracost-reports
           path: |
-            checkov-reports/
             infracost-report-${{ inputs.env_name }}.html
             infracost-comment-${{ inputs.env_name }}.json
+
+      - name: Upload Checkov reports
+        if: always()
+        uses: actions/upload-artifact@v4
+        with:
+          name: checkov-reports
+          path: checkov-reports/
+
+      - name: Debug Checkov Report Contents (Optional)
+        if: always()
+        run: |
+          echo "📄 Listing Checkov reports:"
+          ls -R checkov-reports || echo "❌ No reports found"
