--- a/.github/workflows/ci-dev.yaml
+++ b/.github/workflows/ci-dev.yaml
@@ -99,7 +99,7 @@ jobs:
       - name: Evaluate Infracost Rego policies with OPA
         run: |
           echo "🔍 Evaluating Rego policies using OPA"
-          for f in policies/**/*.rego; do
+          for f in infracost/policies/**/*.rego; do
             echo "📜 Running policy: $f"
             opa eval --format=pretty \
               --data "$f" \
@@ -112,7 +112,7 @@ jobs:
         run: |
           echo "🔍 Checking for violations..."
           FAILED=0
-          for f in infracost/policies/*.rego; do
+          for f in infracost/policies/**/*.rego; do
             echo "⏳ Evaluating $f..."
             result=$(opa eval --format=json --data "$f" --input infracost-dev.json "data.infracost.deny" | jq '.[0].expressions[0].value | length > 0')
             if [ "$result" == "true" ]; then
